fix cells not running

--- a/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
+++ b/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Firm_Nodes_Edges_Company_Mentions.ipynb
@@ -1186,22 +1186,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_17348\\2372261029.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_24120\\2372261029.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'count': 'weight'}, inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_17348\\2372261029.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_24120\\2372261029.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Source'].fillna(nw_cols['ticker1'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_17348\\2372261029.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_24120\\2372261029.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['Target'].fillna(nw_cols['ticker2'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_17348\\2372261029.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_24120\\2372261029.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1266,7 +1266,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1b374307190>"
+       "<IPython.lib.display.IFrame at 0x28b32398490>"
       ]
      },
      "execution_count": 11,
@@ -1344,47 +1344,47 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Apple Inc.</td>\n",
-       "      <td>Automatic Data Processing Inc.</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>ADP</td>\n",
+       "      <th>76</th>\n",
+       "      <td>AmerisourceBergen Corp.</td>\n",
+       "      <td>Amgen Inc.</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>AMGN</td>\n",
        "      <td>1</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Apple Inc.</td>\n",
-       "      <td>Allegiant Travel Company</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>ALGT</td>\n",
-       "      <td>2</td>\n",
+       "      <th>77</th>\n",
+       "      <td>AmerisourceBergen Corp.</td>\n",
+       "      <td>Cardinal Health Inc.</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>CAH</td>\n",
+       "      <td>1</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Apple Inc.</td>\n",
-       "      <td>Allegion PLC</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>ALLE</td>\n",
-       "      <td>2</td>\n",
+       "      <th>80</th>\n",
+       "      <td>AmerisourceBergen Corp.</td>\n",
+       "      <td>Walgreens Boots Alliance, Inc</td>\n",
+       "      <td>ABC</td>\n",
+       "      <td>WBA</td>\n",
+       "      <td>8</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Apple Inc.</td>\n",
-       "      <td>Amkor Technology Inc.</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>AMKR</td>\n",
-       "      <td>9</td>\n",
+       "      <th>88</th>\n",
+       "      <td>ACI Worldwide Inc.</td>\n",
+       "      <td>Intel Corp.</td>\n",
+       "      <td>ACIW</td>\n",
+       "      <td>INTC</td>\n",
+       "      <td>1</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Apple Inc.</td>\n",
-       "      <td>Amazon.com Inc.</td>\n",
-       "      <td>AAPL</td>\n",
-       "      <td>AMZN</td>\n",
+       "      <th>92</th>\n",
+       "      <td>ACI Worldwide Inc.</td>\n",
+       "      <td>Tenet Healthcare Corp.</td>\n",
+       "      <td>ACIW</td>\n",
+       "      <td>THC</td>\n",
        "      <td>1</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
@@ -1398,38 +1398,38 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1183</th>\n",
-       "      <td>Performance Food Group Inc.</td>\n",
-       "      <td>Sysco Corporation</td>\n",
-       "      <td>PFGC</td>\n",
-       "      <td>SYY</td>\n",
+       "      <th>1204</th>\n",
+       "      <td>Starbucks Corp.</td>\n",
+       "      <td>T-Mobile US Inc.</td>\n",
+       "      <td>SBUX</td>\n",
+       "      <td>TMUS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Undirected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1206</th>\n",
+       "      <td>Starbucks Corp.</td>\n",
+       "      <td>Visteon Corporation</td>\n",
+       "      <td>SBUX</td>\n",
+       "      <td>VC</td>\n",
        "      <td>2</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1191</th>\n",
-       "      <td>Pioneer Natural Resources Co.</td>\n",
-       "      <td>W&amp;T Offshore, Inc.</td>\n",
-       "      <td>PXD</td>\n",
-       "      <td>WTI</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1210</th>\n",
+       "      <td>U.S. Silica Holdings, Inc.</td>\n",
+       "      <td>Union Pacific Corporation</td>\n",
+       "      <td>SLCA</td>\n",
+       "      <td>UNP</td>\n",
+       "      <td>3</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1197</th>\n",
-       "      <td>Republic Services, Inc.</td>\n",
-       "      <td>Waste Management, Inc.</td>\n",
-       "      <td>RSG</td>\n",
-       "      <td>WM</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Undirected</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1215</th>\n",
-       "      <td>Spirit Aerosystems Holdings, Inc.</td>\n",
-       "      <td>Textron Inc.</td>\n",
-       "      <td>SPR</td>\n",
-       "      <td>TXT</td>\n",
+       "      <th>1214</th>\n",
+       "      <td>Snap-on Inc.</td>\n",
+       "      <td>Stanley Black &amp; Decker Inc.</td>\n",
+       "      <td>SNA</td>\n",
+       "      <td>SWK</td>\n",
        "      <td>1</td>\n",
        "      <td>Undirected</td>\n",
        "    </tr>\n",
@@ -1444,37 +1444,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>297 rows × 6 columns</p>\n",
+       "<p>303 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 Source                          Target  \\\n",
-       "1                            Apple Inc.  Automatic Data Processing Inc.   \n",
-       "3                            Apple Inc.        Allegiant Travel Company   \n",
-       "5                            Apple Inc.                    Allegion PLC   \n",
-       "7                            Apple Inc.           Amkor Technology Inc.   \n",
-       "8                            Apple Inc.                 Amazon.com Inc.   \n",
-       "...                                 ...                             ...   \n",
-       "1183        Performance Food Group Inc.               Sysco Corporation   \n",
-       "1191      Pioneer Natural Resources Co.              W&T Offshore, Inc.   \n",
-       "1197            Republic Services, Inc.          Waste Management, Inc.   \n",
-       "1215  Spirit Aerosystems Holdings, Inc.                    Textron Inc.   \n",
-       "1226                 Toll Brothers Inc.                     Vector Ltd.   \n",
+       "                          Source                         Target ticker1  \\\n",
+       "76       AmerisourceBergen Corp.                     Amgen Inc.     ABC   \n",
+       "77       AmerisourceBergen Corp.           Cardinal Health Inc.     ABC   \n",
+       "80       AmerisourceBergen Corp.  Walgreens Boots Alliance, Inc     ABC   \n",
+       "88            ACI Worldwide Inc.                    Intel Corp.    ACIW   \n",
+       "92            ACI Worldwide Inc.         Tenet Healthcare Corp.    ACIW   \n",
+       "...                          ...                            ...     ...   \n",
+       "1204             Starbucks Corp.               T-Mobile US Inc.    SBUX   \n",
+       "1206             Starbucks Corp.            Visteon Corporation    SBUX   \n",
+       "1210  U.S. Silica Holdings, Inc.      Union Pacific Corporation    SLCA   \n",
+       "1214                Snap-on Inc.    Stanley Black & Decker Inc.     SNA   \n",
+       "1226          Toll Brothers Inc.                    Vector Ltd.     TOL   \n",
        "\n",
-       "     ticker1 ticker2  weight        Type  \n",
-       "1       AAPL     ADP       1  Undirected  \n",
-       "3       AAPL    ALGT       2  Undirected  \n",
-       "5       AAPL    ALLE       2  Undirected  \n",
-       "7       AAPL    AMKR       9  Undirected  \n",
-       "8       AAPL    AMZN       1  Undirected  \n",
-       "...      ...     ...     ...         ...  \n",
-       "1183    PFGC     SYY       2  Undirected  \n",
-       "1191     PXD     WTI       1  Undirected  \n",
-       "1197     RSG      WM       1  Undirected  \n",
-       "1215     SPR     TXT       1  Undirected  \n",
-       "1226     TOL     VGR       1  Undirected  \n",
+       "     ticker2  weight        Type  \n",
+       "76      AMGN       1  Undirected  \n",
+       "77       CAH       1  Undirected  \n",
+       "80       WBA       8  Undirected  \n",
+       "88      INTC       1  Undirected  \n",
+       "92       THC       1  Undirected  \n",
+       "...      ...     ...         ...  \n",
+       "1204    TMUS       1  Undirected  \n",
+       "1206      VC       2  Undirected  \n",
+       "1210     UNP       3  Undirected  \n",
+       "1214     SWK       1  Undirected  \n",
+       "1226     VGR       1  Undirected  \n",
        "\n",
-       "[297 rows x 6 columns]"
+       "[303 rows x 6 columns]"
       ]
      },
      "execution_count": 13,
@@ -1529,7 +1529,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1b374345a90>"
+       "<IPython.lib.display.IFrame at 0x28b31f8dad0>"
       ]
      },
      "execution_count": 15,
