--- a/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Call_Nodes_Edges_Company_Mentions_Direct.ipynb
+++ b/Code/Exploratory Data Analysis/Company Mentions Network/Visualize_Call_Nodes_Edges_Company_Mentions_Direct.ipynb
@@ -1255,34 +1255,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20548\\567856159.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8760\\567856159.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['company1'].fillna(nw_cols['ticker1'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20548\\567856159.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8760\\567856159.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['company2'].fillna(nw_cols['ticker2'], inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20548\\567856159.py:7: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8760\\567856159.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['company1'] = nw_cols['company1'] + ':' + nw_cols['fixed_quarter_date']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20548\\567856159.py:8: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8760\\567856159.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols['company2'] = nw_cols['company2'] + ':' + nw_cols['fixed_quarter_date']\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20548\\567856159.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8760\\567856159.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  nw_cols.rename(columns={'company1': 'Source', 'company2': 'Target', 'count': 'weight'}, inplace=True)\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_20548\\567856159.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8760\\567856159.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1342,7 +1342,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x22ca2b8ed90>"
+       "<IPython.lib.display.IFrame at 0x1fa8b5cd690>"
       ]
      },
      "execution_count": 10,
