--- a/Code/Modelling/XGBoost/Change Model/XGBoost_Change_model_2.ipynb
+++ b/Code/Modelling/XGBoost/Change Model/XGBoost_Change_model_2.ipynb
@@ -30,7 +30,7 @@
     "# Import module\n",
     "from XGBoost_Functions import *\n",
     "# Model name\n",
-    "model_name = 'exclude_previous_rating_change_model_2'\n",
+    "model_name = 'rating_change_model_2'\n",
     "import json"
    ]
   },
@@ -137,22 +137,19 @@
       " 'num__incomeBeforeTaxRatio' 'num__incomeTaxExpense'\n",
       " 'num__netIncome_income_statement' 'num__netIncomeRatio' 'num__eps'\n",
       " 'num__epsdiluted' 'num__weightedAverageShsOut'\n",
-      " 'num__weightedAverageShsOutDil' 'num__marketCap'\n",
+      " 'num__weightedAverageShsOutDil' 'num__marketCap' 'num__currentRatio'\n",
+      " 'num__quickRatio' 'num__cashRatio' 'num__returnOnAssets'\n",
+      " 'num__returnOnEquity' 'num__returnOnCapitalEmployed' 'num__EBITtoRevenue'\n",
+      " 'num__debtRatio' 'num__debtRatioAlt' 'num__debtEquityRatio'\n",
+      " 'num__equityMultiplier' 'num__enterpriseValueMultiplier'\n",
+      " 'num__operatingCashFlowPerShare' 'num__freeCashFlowPerShare'\n",
+      " 'num__cashPerShare' 'num__operatingCashFlowToSales'\n",
+      " 'num__freeCashFlowToOperatingCashFlow'\n",
       " 'cat__Sector_Communication Services' 'cat__Sector_Consumer Discretionary'\n",
       " 'cat__Sector_Consumer Staples' 'cat__Sector_Energy'\n",
       " 'cat__Sector_Financials' 'cat__Sector_Health Care'\n",
       " 'cat__Sector_Industrials' 'cat__Sector_Information Technology'\n",
-      " 'cat__Sector_Materials' 'cat__Sector_Real Estate' 'cat__Sector_Utilities'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_A'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_AA'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_AAA'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_B'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_BB'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_BBB'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_C'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_CC'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_CCC'\n",
-      " 'cat__rating_on_previous_fixed_quarter_date_D']\n"
+      " 'cat__Sector_Materials' 'cat__Sector_Real Estate' 'cat__Sector_Utilities']\n"
      ]
     }
    ],
