--- a/Code/Modelling/XGBoost/Change Model/XGBoost_Change_model_3.ipynb
+++ b/Code/Modelling/XGBoost/Change Model/XGBoost_Change_model_3.ipynb
@@ -30,7 +30,7 @@
     "# Import module\n",
     "from XGBoost_Functions import *\n",
     "# Model name\n",
-    "model_name = 'exclude_previous_rating_model_3'\n",
+    "model_name = 'rating_change_model_3'\n",
     "import json"
    ]
   },
