--- a/Code/Modelling/XGBoost/Rating Model - Exclude Previous Rating/XGBoost_Exclude_Previous_Model_2.ipynb
+++ b/Code/Modelling/XGBoost/Rating Model - Exclude Previous Rating/XGBoost_Exclude_Previous_Model_2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# model 1\n",
+    "# model 2\n",
     "\n"
    ]
   },
@@ -30,7 +30,7 @@
     "# Import module\n",
     "from XGBoost_Functions import *\n",
     "# Model name\n",
-    "model_name = 'exclude_previous_rating_change_model_1'\n",
+    "model_name = 'exclude_previous_rating_model_2'\n",
     "import json"
    ]
   },
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Get the column names and mapping\n",
-    "numeric_feature_columns, cat_feature_columns, target_column, custom_mapping = get_column_names_and_mapping_change(model_name)"
+    "numeric_feature_columns, cat_feature_columns, target_column, custom_mapping = get_column_names_and_mapping(model_name)"
    ]
   },
   {
@@ -85,7 +85,74 @@
      "output_type": "stream",
      "text": [
       "feature names: \n",
-      "['num__Altman_Z']\n"
+      "['num__EBIT' 'num__common_plus_preferred_stock' 'num__workingCapital'\n",
+      " 'num__Ratio_A' 'num__Ratio_B' 'num__Ratio_C' 'num__Ratio_D'\n",
+      " 'num__Ratio_E' 'num__cashAndCashEquivalents' 'num__shortTermInvestments'\n",
+      " 'num__cashAndShortTermInvestments' 'num__netReceivables'\n",
+      " 'num__inventory_balance_sheet' 'num__otherCurrentAssets'\n",
+      " 'num__totalCurrentAssets' 'num__propertyPlantEquipmentNet'\n",
+      " 'num__goodwill' 'num__intangibleAssets'\n",
+      " 'num__goodwillAndIntangibleAssets' 'num__longTermInvestments'\n",
+      " 'num__taxAssets' 'num__otherNonCurrentAssets'\n",
+      " 'num__totalNonCurrentAssets' 'num__otherAssets' 'num__totalAssets'\n",
+      " 'num__accountPayables' 'num__shortTermDebt' 'num__taxPayables'\n",
+      " 'num__deferredRevenue' 'num__otherCurrentLiabilities'\n",
+      " 'num__totalCurrentLiabilities' 'num__longTermDebt'\n",
+      " 'num__deferredRevenueNonCurrent' 'num__deferredTaxLiabilitiesNonCurrent'\n",
+      " 'num__otherNonCurrentLiabilities' 'num__totalNonCurrentLiabilities'\n",
+      " 'num__otherLiabilities' 'num__capitalLeaseObligations'\n",
+      " 'num__totalLiabilities' 'num__preferredStock' 'num__commonStock'\n",
+      " 'num__retainedEarnings' 'num__accumulatedOtherComprehensiveIncomeLoss'\n",
+      " 'num__othertotalStockholdersEquity' 'num__totalStockholdersEquity'\n",
+      " 'num__totalEquity' 'num__totalLiabilitiesAndStockholdersEquity'\n",
+      " 'num__minorityInterest' 'num__totalLiabilitiesAndTotalEquity'\n",
+      " 'num__totalInvestments' 'num__totalDebt' 'num__netDebt'\n",
+      " 'num__netIncome_cash_flow_statement'\n",
+      " 'num__depreciationAndAmortization_cash_flow_statement'\n",
+      " 'num__deferredIncomeTax' 'num__stockBasedCompensation'\n",
+      " 'num__changeInWorkingCapital' 'num__accountsReceivables'\n",
+      " 'num__inventory_cash_flow_statement' 'num__accountsPayables'\n",
+      " 'num__otherWorkingCapital' 'num__otherNonCashItems'\n",
+      " 'num__netCashProvidedByOperatingActivities'\n",
+      " 'num__investmentsInPropertyPlantAndEquipment' 'num__acquisitionsNet'\n",
+      " 'num__purchasesOfInvestments' 'num__salesMaturitiesOfInvestments'\n",
+      " 'num__otherInvestingActivites' 'num__netCashUsedForInvestingActivites'\n",
+      " 'num__debtRepayment' 'num__commonStockIssued'\n",
+      " 'num__commonStockRepurchased' 'num__dividendsPaid'\n",
+      " 'num__otherFinancingActivites'\n",
+      " 'num__netCashUsedProvidedByFinancingActivities'\n",
+      " 'num__effectOfForexChangesOnCash' 'num__netChangeInCash'\n",
+      " 'num__cashAtEndOfPeriod' 'num__cashAtBeginningOfPeriod'\n",
+      " 'num__operatingCashFlow' 'num__capitalExpenditure' 'num__freeCashFlow'\n",
+      " 'num__revenue' 'num__costOfRevenue' 'num__grossProfit'\n",
+      " 'num__grossProfitRatio' 'num__researchAndDevelopmentExpenses'\n",
+      " 'num__generalAndAdministrativeExpenses'\n",
+      " 'num__sellingAndMarketingExpenses'\n",
+      " 'num__sellingGeneralAndAdministrativeExpenses' 'num__otherExpenses'\n",
+      " 'num__operatingExpenses' 'num__costAndExpenses' 'num__interestIncome'\n",
+      " 'num__interestExpense'\n",
+      " 'num__depreciationAndAmortization_income_statement' 'num__ebitda'\n",
+      " 'num__ebitdaratio' 'num__operatingIncome' 'num__operatingIncomeRatio'\n",
+      " 'num__totalOtherIncomeExpensesNet' 'num__incomeBeforeTax'\n",
+      " 'num__incomeBeforeTaxRatio' 'num__incomeTaxExpense'\n",
+      " 'num__netIncome_income_statement' 'num__netIncomeRatio' 'num__eps'\n",
+      " 'num__epsdiluted' 'num__weightedAverageShsOut'\n",
+      " 'num__weightedAverageShsOutDil' 'num__marketCap'\n",
+      " 'cat__Sector_Communication Services' 'cat__Sector_Consumer Discretionary'\n",
+      " 'cat__Sector_Consumer Staples' 'cat__Sector_Energy'\n",
+      " 'cat__Sector_Financials' 'cat__Sector_Health Care'\n",
+      " 'cat__Sector_Industrials' 'cat__Sector_Information Technology'\n",
+      " 'cat__Sector_Materials' 'cat__Sector_Real Estate' 'cat__Sector_Utilities'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_A'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_AA'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_AAA'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_B'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_BB'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_BBB'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_C'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_CC'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_CCC'\n",
+      " 'cat__rating_on_previous_fixed_quarter_date_D']\n"
      ]
     }
    ],
@@ -96,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-04-04T20:39:04.191822Z",
@@ -110,9 +177,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned hyperparameters: {'booster': 'gbtree', 'learning_rate': 0.01, 'max_depth': 3, 'min_child_weight': 1, 'objective': 'multi:softprob'}\n",
-      "Train accuracy of best model:  0.3986809188082784\n",
-      "Best mean CV accuracy: 0.3714000930809805\n"
+      "Tuned hyperparameters: {'booster': 'gbtree', 'objective': 'multi:softprob'}\n",
+      "Train accuracy of best model:  0.9542870138730953\n",
+      "Best mean CV accuracy: 0.9333612576274692\n"
      ]
     }
    ],
