--- a/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_3.ipynb
+++ b/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_3.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:05.132871Z",
-     "iopub.status.busy": "2024-04-29T04:49:05.132619Z",
-     "iopub.status.idle": "2024-04-29T04:49:07.128900Z",
-     "shell.execute_reply": "2024-04-29T04:49:07.128491Z"
+     "iopub.execute_input": "2024-05-02T05:27:36.907567Z",
+     "iopub.status.busy": "2024-05-02T05:27:36.906716Z",
+     "iopub.status.idle": "2024-05-02T05:27:38.638095Z",
+     "shell.execute_reply": "2024-05-02T05:27:38.637131Z"
     }
    },
    "outputs": [],
@@ -37,10 +37,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:07.131948Z",
-     "iopub.status.busy": "2024-04-29T04:49:07.131149Z",
-     "iopub.status.idle": "2024-04-29T04:49:09.888619Z",
-     "shell.execute_reply": "2024-04-29T04:49:09.888213Z"
+     "iopub.execute_input": "2024-05-02T05:27:38.643207Z",
+     "iopub.status.busy": "2024-05-02T05:27:38.642825Z",
+     "iopub.status.idle": "2024-05-02T05:27:41.516996Z",
+     "shell.execute_reply": "2024-05-02T05:27:41.515484Z"
     }
    },
    "outputs": [],
@@ -54,10 +54,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:09.891553Z",
-     "iopub.status.busy": "2024-04-29T04:49:09.890888Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.271297Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.270893Z"
+     "iopub.execute_input": "2024-05-02T05:27:41.523094Z",
+     "iopub.status.busy": "2024-05-02T05:27:41.522581Z",
+     "iopub.status.idle": "2024-05-02T05:27:41.875081Z",
+     "shell.execute_reply": "2024-05-02T05:27:41.874256Z"
     }
    },
    "outputs": [],
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.274140Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.273431Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.330339Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.329816Z"
+     "iopub.execute_input": "2024-05-02T05:27:41.879682Z",
+     "iopub.status.busy": "2024-05-02T05:27:41.879328Z",
+     "iopub.status.idle": "2024-05-02T05:27:41.951185Z",
+     "shell.execute_reply": "2024-05-02T05:27:41.950394Z"
     }
    },
    "outputs": [
@@ -85,7 +85,9 @@
       "feature names: \n",
       "['num__EBIT' 'num__common_plus_preferred_stock' 'num__workingCapital'\n",
       " 'num__Ratio_A' 'num__Ratio_B' 'num__Ratio_C' 'num__Ratio_D'\n",
-      " 'num__Ratio_E' 'num__cashAndCashEquivalents' 'num__shortTermInvestments'\n",
+      " 'num__Ratio_E' 'num__Positiv' 'num__Negativ' 'num__Strong' 'num__Weak'\n",
+      " 'num__Active' 'num__Passive' 'num__Ovrst' 'num__Undrst'\n",
+      " 'num__cashAndCashEquivalents' 'num__shortTermInvestments'\n",
       " 'num__cashAndShortTermInvestments' 'num__netReceivables'\n",
       " 'num__inventory_balance_sheet' 'num__otherCurrentAssets'\n",
       " 'num__totalCurrentAssets' 'num__propertyPlantEquipmentNet'\n",
@@ -135,11 +137,28 @@
       " 'num__incomeBeforeTaxRatio' 'num__incomeTaxExpense'\n",
       " 'num__netIncome_income_statement' 'num__netIncomeRatio' 'num__eps'\n",
       " 'num__epsdiluted' 'num__weightedAverageShsOut'\n",
-      " 'num__weightedAverageShsOutDil' 'num__marketCap' 'num__Ratio_A_diff'\n",
-      " 'num__Ratio_B_diff' 'num__Ratio_C_diff' 'num__Ratio_D_diff'\n",
-      " 'num__Ratio_E_diff' 'num__grossProfitRatio_diff' 'num__ebitdaratio_diff'\n",
+      " 'num__weightedAverageShsOutDil' 'num__marketCap' 'num__num_transparency'\n",
+      " 'num__gf_score' 'num__word_count' 'num__tone' 'num__num_q_by_len'\n",
+      " 'num__pos_score_finbert' 'num__Ratio_A_diff' 'num__Ratio_B_diff'\n",
+      " 'num__Ratio_C_diff' 'num__Ratio_D_diff' 'num__Ratio_E_diff'\n",
+      " 'num__grossProfitRatio_diff' 'num__ebitdaratio_diff'\n",
       " 'num__operatingIncomeRatio_diff' 'num__incomeBeforeTaxRatio_diff'\n",
-      " 'num__netIncomeRatio_diff']\n"
+      " 'num__netIncomeRatio_diff' 'num__currentRatio' 'num__quickRatio'\n",
+      " 'num__cashRatio' 'num__returnOnAssets' 'num__returnOnEquity'\n",
+      " 'num__returnOnCapitalEmployed' 'num__EBITtoRevenue' 'num__debtRatio'\n",
+      " 'num__debtRatioAlt' 'num__debtEquityRatio' 'num__equityMultiplier'\n",
+      " 'num__enterpriseValueMultiplier' 'num__operatingCashFlowPerShare'\n",
+      " 'num__freeCashFlowPerShare' 'num__cashPerShare'\n",
+      " 'num__operatingCashFlowToSales' 'num__freeCashFlowToOperatingCashFlow'\n",
+      " 'num__currentRatio_diff' 'num__quickRatio_diff' 'num__cashRatio_diff'\n",
+      " 'num__returnOnAssets_diff' 'num__returnOnEquity_diff'\n",
+      " 'num__returnOnCapitalEmployed_diff' 'num__EBITtoRevenue_diff'\n",
+      " 'num__debtRatio_diff' 'num__debtRatioAlt_diff'\n",
+      " 'num__debtEquityRatio_diff' 'num__equityMultiplier_diff'\n",
+      " 'num__enterpriseValueMultiplier_diff'\n",
+      " 'num__operatingCashFlowPerShare_diff' 'num__freeCashFlowPerShare_diff'\n",
+      " 'num__cashPerShare_diff' 'num__operatingCashFlowToSales_diff'\n",
+      " 'num__freeCashFlowToOperatingCashFlow_diff']\n"
      ]
     }
    ],
@@ -150,16 +169,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.342853Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.342670Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.535968Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.535585Z"
+     "iopub.execute_input": "2024-05-02T05:27:42.029733Z",
+     "iopub.status.busy": "2024-05-02T05:27:42.029458Z",
+     "iopub.status.idle": "2024-05-02T06:36:41.463530Z",
+     "shell.execute_reply": "2024-05-02T06:36:41.462684Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuned hyperparameters: {'C': 0.001, 'class_weight': 'balanced', 'l1_ratio': 0.75, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.02277385561375541\n",
+      "Best mean CV accuracy: 0.7617433872100466\n",
+      "Coefficients: [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      "  0.]]\n",
+      "Corresponding class: [-1  0  1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Train model\n",
     "best_model = train_model_with_grid_search(X_train_scaled, y_train, model_name)"
@@ -167,13 +221,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T05:01:57.538607Z",
-     "iopub.status.busy": "2024-04-29T05:01:57.537943Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.632655Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.632286Z"
+     "iopub.execute_input": "2024-05-02T06:36:41.467274Z",
+     "iopub.status.busy": "2024-05-02T06:36:41.466897Z",
+     "iopub.status.idle": "2024-05-02T06:36:41.621628Z",
+     "shell.execute_reply": "2024-05-02T06:36:41.620929Z"
     }
    },
    "outputs": [
@@ -182,11 +236,11 @@
      "output_type": "stream",
      "text": [
       "X_test_scaled shape\n",
-      "(1092, 2)\n",
+      "(1118, 169)\n",
       "y_test shape\n",
-      "(1092,)\n",
-      "accuracy: 0.9496336996336996\n",
-      "share of correct predictions: 0.9496336996336996\n",
+      "(1118,)\n",
+      "accuracy: 0.017889087656529516\n",
+      "share of correct predictions: 0.017889087656529516\n",
       "assertion that they match:\n"
      ]
     }
@@ -213,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
