logistic change runs

--- a/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_2.ipynb
+++ b/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_2.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T05:27:44.735751Z",
-     "iopub.status.busy": "2024-05-02T05:27:44.734994Z",
-     "iopub.status.idle": "2024-05-02T05:27:46.258861Z",
-     "shell.execute_reply": "2024-05-02T05:27:46.258124Z"
+     "iopub.execute_input": "2024-05-02T06:49:09.342112Z",
+     "iopub.status.busy": "2024-05-02T06:49:09.341516Z",
+     "iopub.status.idle": "2024-05-02T06:49:10.802458Z",
+     "shell.execute_reply": "2024-05-02T06:49:10.801560Z"
     }
    },
    "outputs": [],
@@ -37,10 +37,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T05:27:46.263487Z",
-     "iopub.status.busy": "2024-05-02T05:27:46.263130Z",
-     "iopub.status.idle": "2024-05-02T05:27:49.120919Z",
-     "shell.execute_reply": "2024-05-02T05:27:49.119191Z"
+     "iopub.execute_input": "2024-05-02T06:49:10.807138Z",
+     "iopub.status.busy": "2024-05-02T06:49:10.806836Z",
+     "iopub.status.idle": "2024-05-02T06:49:13.738490Z",
+     "shell.execute_reply": "2024-05-02T06:49:13.736911Z"
     }
    },
    "outputs": [],
@@ -54,10 +54,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T05:27:49.127280Z",
-     "iopub.status.busy": "2024-05-02T05:27:49.126387Z",
-     "iopub.status.idle": "2024-05-02T05:27:49.450381Z",
-     "shell.execute_reply": "2024-05-02T05:27:49.449703Z"
+     "iopub.execute_input": "2024-05-02T06:49:13.745027Z",
+     "iopub.status.busy": "2024-05-02T06:49:13.744481Z",
+     "iopub.status.idle": "2024-05-02T06:49:14.095288Z",
+     "shell.execute_reply": "2024-05-02T06:49:14.094374Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T05:27:49.455194Z",
-     "iopub.status.busy": "2024-05-02T05:27:49.454711Z",
-     "iopub.status.idle": "2024-05-02T05:27:49.530766Z",
-     "shell.execute_reply": "2024-05-02T05:27:49.530094Z"
+     "iopub.execute_input": "2024-05-02T06:49:14.100307Z",
+     "iopub.status.busy": "2024-05-02T06:49:14.100031Z",
+     "iopub.status.idle": "2024-05-02T06:49:14.188385Z",
+     "shell.execute_reply": "2024-05-02T06:49:14.187390Z"
     }
    },
    "outputs": [
@@ -154,7 +154,12 @@
       " 'num__enterpriseValueMultiplier_diff'\n",
       " 'num__operatingCashFlowPerShare_diff' 'num__freeCashFlowPerShare_diff'\n",
       " 'num__cashPerShare_diff' 'num__operatingCashFlowToSales_diff'\n",
-      " 'num__freeCashFlowToOperatingCashFlow_diff']\n"
+      " 'num__freeCashFlowToOperatingCashFlow_diff'\n",
+      " 'cat__Sector_Communication Services' 'cat__Sector_Consumer Discretionary'\n",
+      " 'cat__Sector_Consumer Staples' 'cat__Sector_Energy'\n",
+      " 'cat__Sector_Financials' 'cat__Sector_Health Care'\n",
+      " 'cat__Sector_Industrials' 'cat__Sector_Information Technology'\n",
+      " 'cat__Sector_Materials' 'cat__Sector_Real Estate' 'cat__Sector_Utilities']\n"
      ]
     }
    ],
@@ -168,10 +173,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T05:27:49.609400Z",
-     "iopub.status.busy": "2024-05-02T05:27:49.609108Z",
-     "iopub.status.idle": "2024-05-02T06:30:53.854506Z",
-     "shell.execute_reply": "2024-05-02T06:30:53.853738Z"
+     "iopub.execute_input": "2024-05-02T06:49:14.234842Z",
+     "iopub.status.busy": "2024-05-02T06:49:14.234549Z",
+     "iopub.status.idle": "2024-05-02T07:54:52.336480Z",
+     "shell.execute_reply": "2024-05-02T07:54:52.335631Z"
     }
    },
    "outputs": [
@@ -179,7 +184,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned hyperparameters: {'C': 0.001, 'class_weight': 'balanced', 'l1_ratio': 0.75, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Tuned hyperparameters: {'C': 0.001, 'class_weight': 'balanced', 'l1_ratio': 0.75, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
       "Train accuracy of best model:  0.0307447050785698\n",
       "Best mean CV accuracy: 0.7617433872100466\n",
       "Coefficients: [[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
@@ -188,21 +193,21 @@
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
       "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+      "  0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n",
       "Corresponding class: [-1  0  1]\n"
      ]
     }
@@ -217,10 +222,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-02T06:30:53.858770Z",
-     "iopub.status.busy": "2024-05-02T06:30:53.858413Z",
-     "iopub.status.idle": "2024-05-02T06:30:54.018497Z",
-     "shell.execute_reply": "2024-05-02T06:30:54.017997Z"
+     "iopub.execute_input": "2024-05-02T07:54:52.340416Z",
+     "iopub.status.busy": "2024-05-02T07:54:52.340027Z",
+     "iopub.status.idle": "2024-05-02T07:54:52.510131Z",
+     "shell.execute_reply": "2024-05-02T07:54:52.509425Z"
     }
    },
    "outputs": [
@@ -229,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "X_test_scaled shape\n",
-      "(1118, 155)\n",
+      "(1118, 166)\n",
       "y_test shape\n",
       "(1118,)\n",
       "accuracy: 0.028622540250447227\n",
