--- a/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_smote_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_smote_1.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:05.132871Z",
-     "iopub.status.busy": "2024-04-29T04:49:05.132619Z",
-     "iopub.status.idle": "2024-04-29T04:49:07.128900Z",
-     "shell.execute_reply": "2024-04-29T04:49:07.128491Z"
+     "iopub.execute_input": "2024-05-02T06:42:57.370839Z",
+     "iopub.status.busy": "2024-05-02T06:42:57.370315Z",
+     "iopub.status.idle": "2024-05-02T06:42:59.418253Z",
+     "shell.execute_reply": "2024-05-02T06:42:59.417839Z"
     }
    },
    "outputs": [],
@@ -34,13 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:07.131948Z",
-     "iopub.status.busy": "2024-04-29T04:49:07.131149Z",
-     "iopub.status.idle": "2024-04-29T04:49:09.888619Z",
-     "shell.execute_reply": "2024-04-29T04:49:09.888213Z"
+     "iopub.execute_input": "2024-05-02T06:42:59.421173Z",
+     "iopub.status.busy": "2024-05-02T06:42:59.420434Z",
+     "iopub.status.idle": "2024-05-02T06:43:00.709594Z",
+     "shell.execute_reply": "2024-05-02T06:43:00.709177Z"
     }
    },
    "outputs": [],
@@ -51,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:09.891553Z",
-     "iopub.status.busy": "2024-04-29T04:49:09.890888Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.271297Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.270893Z"
+     "iopub.execute_input": "2024-05-02T06:43:00.712532Z",
+     "iopub.status.busy": "2024-05-02T06:43:00.711864Z",
+     "iopub.status.idle": "2024-05-02T06:43:01.002510Z",
+     "shell.execute_reply": "2024-05-02T06:43:01.002104Z"
     }
    },
    "outputs": [],
@@ -68,13 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.274140Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.273431Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.330339Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.329816Z"
+     "iopub.execute_input": "2024-05-02T06:43:01.005323Z",
+     "iopub.status.busy": "2024-05-02T06:43:01.004660Z",
+     "iopub.status.idle": "2024-05-02T06:43:01.042321Z",
+     "shell.execute_reply": "2024-05-02T06:43:01.041816Z"
     }
    },
    "outputs": [
@@ -94,15 +94,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-02T06:43:01.056462Z",
+     "iopub.status.busy": "2024-05-02T06:43:01.056281Z",
+     "iopub.status.idle": "2024-05-02T06:43:01.234860Z",
+     "shell.execute_reply": "2024-05-02T06:43:01.234490Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{-1: 96, 0: 4166, 1: 135}\n",
-      "{-1: 1000, 0: 4166, 1: 1000}\n"
+      "{-1: 100, 0: 4156, 1: 135}\n",
+      "{-1: 1000, 0: 4156, 1: 1000}\n"
      ]
     }
    ],
@@ -120,16 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-02T06:43:01.237567Z",
+     "iopub.status.busy": "2024-05-02T06:43:01.236825Z",
+     "iopub.status.idle": "2024-05-02T06:43:01.242826Z",
+     "shell.execute_reply": "2024-05-02T06:43:01.242472Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.35295778624876467"
+       "0.2940844275024707"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.342853Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.342670Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.535968Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.535585Z"
+     "iopub.execute_input": "2024-05-02T06:43:01.245257Z",
+     "iopub.status.busy": "2024-05-02T06:43:01.244601Z",
+     "iopub.status.idle": "2024-05-02T06:43:07.920850Z",
+     "shell.execute_reply": "2024-05-02T06:43:07.920479Z"
     }
    },
    "outputs": [
@@ -155,11 +169,11 @@
      "output_type": "stream",
      "text": [
       "Tuned hyperparameters: {'C': 0.001, 'class_weight': None, 'l1_ratio': 0.0, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
-      "Train accuracy of best model:  0.6756406097956535\n",
-      "Best mean CV accuracy: 0.6756405756867137\n",
-      "Coefficients: [[-0.00077917  0.00014474]\n",
-      " [-0.03863574 -0.06811877]\n",
-      " [ 0.05094895  0.08603081]]\n",
+      "Train accuracy of best model:  0.6751137102014295\n",
+      "Best mean CV accuracy: 0.6751136759260236\n",
+      "Coefficients: [[-0.00299336 -0.04094964]\n",
+      " [-0.05906144 -0.01627431]\n",
+      " [ 0.07776741  0.06241605]]\n",
       "Corresponding class: [-1  0  1]\n"
      ]
     }
@@ -171,13 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T05:01:57.538607Z",
-     "iopub.status.busy": "2024-04-29T05:01:57.537943Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.632655Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.632286Z"
+     "iopub.execute_input": "2024-05-02T06:43:07.923446Z",
+     "iopub.status.busy": "2024-05-02T06:43:07.922781Z",
+     "iopub.status.idle": "2024-05-02T06:43:08.015708Z",
+     "shell.execute_reply": "2024-05-02T06:43:08.015332Z"
     }
    },
    "outputs": [
@@ -186,11 +200,11 @@
      "output_type": "stream",
      "text": [
       "X_test_scaled shape\n",
-      "(1092, 2)\n",
+      "(1118, 2)\n",
       "y_test shape\n",
-      "(1092,)\n",
-      "accuracy: 0.9496336996336996\n",
-      "share of correct predictions: 0.9496336996336996\n",
+      "(1118,)\n",
+      "accuracy: 0.9534883720930233\n",
+      "share of correct predictions: 0.9534883720930233\n",
       "assertion that they match:\n"
      ]
     }
@@ -217,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
