--- a/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_1.ipynb
+++ b/Code/Modelling/Logistic Regression/Change Model/Logistic_Change_Model_1.ipynb
@@ -12,10 +12,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:05.132871Z",
-     "iopub.status.busy": "2024-04-29T04:49:05.132619Z",
-     "iopub.status.idle": "2024-04-29T04:49:07.128900Z",
-     "shell.execute_reply": "2024-04-29T04:49:07.128491Z"
+     "iopub.execute_input": "2024-05-02T06:40:07.156278Z",
+     "iopub.status.busy": "2024-05-02T06:40:07.155880Z",
+     "iopub.status.idle": "2024-05-02T06:40:09.201826Z",
+     "shell.execute_reply": "2024-05-02T06:40:09.201354Z"
     }
    },
    "outputs": [],
@@ -37,10 +37,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:07.131948Z",
-     "iopub.status.busy": "2024-04-29T04:49:07.131149Z",
-     "iopub.status.idle": "2024-04-29T04:49:09.888619Z",
-     "shell.execute_reply": "2024-04-29T04:49:09.888213Z"
+     "iopub.execute_input": "2024-05-02T06:40:09.205016Z",
+     "iopub.status.busy": "2024-05-02T06:40:09.204143Z",
+     "iopub.status.idle": "2024-05-02T06:40:10.501151Z",
+     "shell.execute_reply": "2024-05-02T06:40:10.500730Z"
     }
    },
    "outputs": [],
@@ -54,10 +54,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:09.891553Z",
-     "iopub.status.busy": "2024-04-29T04:49:09.890888Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.271297Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.270893Z"
+     "iopub.execute_input": "2024-05-02T06:40:10.504072Z",
+     "iopub.status.busy": "2024-05-02T06:40:10.503412Z",
+     "iopub.status.idle": "2024-05-02T06:40:10.794865Z",
+     "shell.execute_reply": "2024-05-02T06:40:10.794458Z"
     }
    },
    "outputs": [],
@@ -71,10 +71,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.274140Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.273431Z",
-     "iopub.status.idle": "2024-04-29T04:49:10.330339Z",
-     "shell.execute_reply": "2024-04-29T04:49:10.329816Z"
+     "iopub.execute_input": "2024-05-02T06:40:10.797663Z",
+     "iopub.status.busy": "2024-05-02T06:40:10.797000Z",
+     "iopub.status.idle": "2024-05-02T06:40:10.834316Z",
+     "shell.execute_reply": "2024-05-02T06:40:10.833815Z"
     }
    },
    "outputs": [
@@ -97,10 +97,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T04:49:10.342853Z",
-     "iopub.status.busy": "2024-04-29T04:49:10.342670Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.535968Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.535585Z"
+     "iopub.execute_input": "2024-05-02T06:40:10.848816Z",
+     "iopub.status.busy": "2024-05-02T06:40:10.848634Z",
+     "iopub.status.idle": "2024-05-02T06:40:53.331017Z",
+     "shell.execute_reply": "2024-05-02T06:40:53.330633Z"
     }
    },
    "outputs": [
@@ -108,9 +108,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tuned hyperparameters: {'C': 0.001, 'class_weight': 'balanced', 'l1_ratio': 0.5, 'multi_class': 'ovr', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
-      "Train accuracy of best model:  0.030702751876279282\n",
-      "Best mean CV accuracy: 0.7640741028027718\n",
+      "Tuned hyperparameters: {'C': 0.001, 'class_weight': 'balanced', 'l1_ratio': 0.75, 'multi_class': 'multinomial', 'penalty': 'elasticnet', 'solver': 'saga'}\n",
+      "Train accuracy of best model:  0.9464814393076748\n",
+      "Best mean CV accuracy: 0.5785998792373814\n",
       "Coefficients: [[0. 0.]\n",
       " [0. 0.]\n",
       " [0. 0.]]\n",
@@ -128,10 +128,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-04-29T05:01:57.538607Z",
-     "iopub.status.busy": "2024-04-29T05:01:57.537943Z",
-     "iopub.status.idle": "2024-04-29T05:01:57.632655Z",
-     "shell.execute_reply": "2024-04-29T05:01:57.632286Z"
+     "iopub.execute_input": "2024-05-02T06:40:53.333596Z",
+     "iopub.status.busy": "2024-05-02T06:40:53.332936Z",
+     "iopub.status.idle": "2024-05-02T06:40:53.424923Z",
+     "shell.execute_reply": "2024-05-02T06:40:53.424549Z"
     }
    },
    "outputs": [
@@ -140,11 +140,11 @@
      "output_type": "stream",
      "text": [
       "X_test_scaled shape\n",
-      "(1092, 2)\n",
+      "(1118, 2)\n",
       "y_test shape\n",
-      "(1092,)\n",
-      "accuracy: 0.028388278388278388\n",
-      "share of correct predictions: 0.028388278388278388\n",
+      "(1118,)\n",
+      "accuracy: 0.9534883720930233\n",
+      "share of correct predictions: 0.9534883720930233\n",
       "assertion that they match:\n"
      ]
     }
@@ -171,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
