create change model tables

--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[205 rows x 12 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -851,6 +851,102 @@
     "        f.write(latex_with_font_size)\n",
     "\n",
     "    print(pi_top_15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Change Model Comparison Tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exact predictions share == accuracy: True\n",
+      "exact predictions share == accuracy: True\n",
+      "exact predictions share == accuracy: True\n",
+      "Majority baselines are the same: True\n",
+      "                                  Model/Baseline Accuracy  \\\n",
+      "0                                     Altman's Z   0.9535   \n",
+      "0                 Financial Variables and Sector   0.0286   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.5984   \n",
+      "0                              Majority Baseline   0.9535   \n",
+      "\n",
+      "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
+      "0                     0.9091                  0.9535   0.9308  \n",
+      "0                     0.0008                  0.0286   0.0016  \n",
+      "0                     0.9063                  0.5984   0.7189  \n",
+      "0                                                              \n",
+      "exact predictions share == accuracy: True\n",
+      "exact predictions share == accuracy: True\n",
+      "exact predictions share == accuracy: True\n",
+      "Majority baselines are the same: True\n",
+      "                                  Model/Baseline Accuracy  \\\n",
+      "0                                     Altman's Z   0.9535   \n",
+      "0                 Financial Variables and Sector   0.0286   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.5984   \n",
+      "0                              Majority Baseline   0.9535   \n",
+      "\n",
+      "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
+      "0                     0.9091                  0.9535   0.9308  \n",
+      "0                     0.0008                  0.0286   0.0016  \n",
+      "0                     0.9063                  0.5984   0.7189  \n",
+      "0                                                              \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Iterate over just models '_' versus _smote_\n",
+    "for spec in ['', 'smote_']:\n",
+    "\n",
+    "    # Create list of df rows\n",
+    "    model_comparison_rows = []\n",
+    "    majority_baselines = []\n",
+    "    for mn, clean_model_name in zip(['rating_change_model_1', 'rating_change_model_2', 'rating_change_model_3'], [\"Altman's Z\", 'Financial Variables and Sector', 'Financial Variables, Sector, and NLP Features']):\n",
+    "        model_comparison_row, majority_baseline = get_model_comparison_row(mn, clean_model_name)\n",
+    "        model_comparison_rows.append(model_comparison_row)\n",
+    "        majority_baselines.append(majority_baseline)\n",
+    "\n",
+    "    # Concatenate rows\n",
+    "    model_comparison_df = pd.concat(model_comparison_rows)\n",
+    "\n",
+    "    # Check majority baselines are the same\n",
+    "    print('Majority baselines are the same:', all([majority_baseline == majority_baselines[0] for majority_baseline in majority_baselines]))\n",
+    "    # Add row with Model/Baseline = 'Majority Baseline' and Accuracy = majority_baseline[0]\n",
+    "    model_comparison_df = pd.concat([model_comparison_df, pd.DataFrame({\n",
+    "        'Model/Baseline': ['Majority Baseline'],\n",
+    "        'Accuracy': [majority_baselines[0]],\n",
+    "        'Weighted Average Precision': [''],\n",
+    "        'Weighted Average Recall': [''],\n",
+    "        'F1 Score': [''],\n",
+    "        'Share 1 Rating Or Less From Actual': ['']\n",
+    "    })])\n",
+    "    # Drop 'Share 1 Rating Or Less From Actual' column\n",
+    "    model_comparison_df = model_comparison_df.drop(columns=['Share 1 Rating Or Less From Actual'])\n",
+    "\n",
+    "    # Export to Excel\n",
+    "    model_comparison_df.to_excel('../../../../Output/Modelling/' + classifier_name + '/Tables/change_' + spec + 'model_comparison_df.xlsx', index = False)\n",
+    "\n",
+    "    # Export to LaTeX\n",
+    "    # Format columns\n",
+    "    for col in model_comparison_df.columns:\n",
+    "        model_comparison_df[col] = model_comparison_df[col].apply(lambda x: f'{x:.4f}' if isinstance(x, float) else x)\n",
+    "    # Rename 'Share 1 Rating Or Less From Actual' to 'Share $le$ Rating From Actual'\n",
+    "    #model_comparison_df.rename(columns={'Share 1 Rating Or Less From Actual': 'Share $\\\\le$ 1 Rating From Actual'}, inplace=True)\n",
+    "    # Center all columns\n",
+    "    lt_string = model_comparison_df.to_latex(index=False, column_format='c' * len(model_comparison_df.columns), escape=False)\n",
+    "    latex_with_font_size = \"\\\\footnotesize\\n\" + lt_string + \"\\n\\\\normalsize\"\n",
+    "    with open('../../../../Output/Modelling/' + classifier_name + '/Tables/change_' + spec + 'model_comparison_df.tex', 'w') as f:\n",
+    "        f.write(latex_with_font_size)\n",
+    "\n",
+    "    print(model_comparison_df)"
    ]
   }
  ],
