create tables and figures

--- a/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
+++ b/Code/Modelling/Logistic Regression/Figure and Table Creation/Create Tables.ipynb
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -890,14 +890,14 @@
       "Majority baselines are the same: True\n",
       "                                  Model/Baseline Accuracy  \\\n",
       "0                                     Altman's Z   0.9535   \n",
-      "0                 Financial Variables and Sector   0.0286   \n",
-      "0  Financial Variables, Sector, and NLP Features   0.5984   \n",
+      "0                 Financial Variables and Sector   0.9472   \n",
+      "0  Financial Variables, Sector, and NLP Features   0.9463   \n",
       "0                              Majority Baseline   0.9535   \n",
       "\n",
       "  Weighted Average Precision Weighted Average Recall F1 Score  \n",
       "0                     0.9091                  0.9535   0.9308  \n",
-      "0                     0.0008                  0.0286   0.0016  \n",
-      "0                     0.9063                  0.5984   0.7189  \n",
+      "0                     0.9097                  0.9472   0.9281  \n",
+      "0                     0.9096                  0.9463   0.9276  \n",
       "0                                                              \n"
      ]
     }
@@ -910,7 +910,7 @@
     "    model_comparison_rows = []\n",
     "    majority_baselines = []\n",
     "    for mn, clean_model_name in zip(['rating_change_model_1', 'rating_change_model_2', 'rating_change_model_3'], [\"Altman's Z\", 'Financial Variables and Sector', 'Financial Variables, Sector, and NLP Features']):\n",
-    "        model_comparison_row, majority_baseline = get_model_comparison_row(mn, clean_model_name)\n",
+    "        model_comparison_row, majority_baseline = get_model_comparison_row(spec + mn, clean_model_name)\n",
     "        model_comparison_rows.append(model_comparison_row)\n",
     "        majority_baselines.append(majority_baseline)\n",
     "\n",
