clean up import

--- a/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
+++ b/Code/Modelling/Statistical Tests for Accuracy Differences.ipynb
@@ -16,8 +16,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from statsmodels.stats.contingency_tables import mcnemar \n",
-    "import scipy.stats as stats"
+    "from statsmodels.stats.contingency_tables import mcnemar"
    ]
   },
   {
