--- a/Code/NLP Feature Construction/Main NLP Features/combine_nlp_old_new.ipynb
+++ b/Code/NLP Feature Construction/Main NLP Features/combine_nlp_old_new.ipynb
@@ -2058,7 +2058,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -2072,7 +2072,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "162b6b064e165ad366d1bd4cdc631c4691b039cb551eb2d47403b16e997dbe09"
+   }
   }
  },
  "nbformat": 4,
